--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-/* Containers */
-#game {
+/* containers */
+.game {
+	font-family: 'lato', sans-serif ;
 	display: flex ;
 	width: 100% ;
 	height: 100vh ;
@@ -7,17 +8,99 @@
 	padding: 0 ;
 	flex-grow: 1 ;
 	flex-shrink: 1 ;
-	font-family: 'Lato', sans-serif ;
-	background: #2B3139 ;
+	font-family: 'lato', sans-serif ;
+	background-color: #2b3139 ;
+}
+
+.game_backgrounds {
+	background: url( "../src/memory_letters_background.svg" ) center center / 78% no-repeat ,
+				url( "../src/memory_squares_background.svg" ) center center / 50% no-repeat ;
+	background-color: #2b3139 ;			
+
+}	
+
+p {
+	margin: 0;
+	padding: 0;
 }
 
 li {
-	font-family: 'FontAwesome' ;
+	font-family: 'fontawesome' ;
 	font-size: 16px ;
+	margin: 0;
+	padding: 0;
 }
+
 a { 
 	font-size: 33px ;
 	color: #50e3c2 ;
+}
+
+.welcome_text {
+	font-size: 14px ;
+	color: #0b97ac ;
+}
+.winner_text {
+	font-size: 22px ;
+	font-weight: 900 ;
+	height: 33px;
+	color: #e3d4a6 ;
+}
+
+.footer {
+	display: flex ;
+	position: absolute ;
+	width: 100% ;
+	bottom: 5px ;
+	left: 0 ;
+	justify-content: center ;
+}
+
+.stars_container {
+	width: 144px ;
+	display: flex ;
+	justify-content: space-around ;
+	margin: 0 ;
+	padding: 0 ; 
+}
+
+.stars {
+	list-style: none ;
+	font-size: 22px ;
+	color: #2c3139 ;
+}
+
+.stars--gold {
+	animation: bump 0.3s cubic-bezier( 0.36 , 0.07 , 0.19 , 0.97 ) both ;
+	color: gold ;
+}
+.copyrights {
+	color: rgba( 83 , 89 , 98 , 1 );
+	text-align: center ;
+	bottom: 5px ;
+	font-size: 11px ;
+	font-weight: 300 ;
+}
+
+.big_letter {
+	transition: all 0.2s ease-out ;
+}
+
+.waved,
+.big_letter:hover {
+    transform: translatey( 20px ); 
+}
+
+.shifted_down {
+	transform: translatey( 900px );
+	height: 0 ;
+	opacity: 0 ;
+}
+
+.move_up {
+	transition: all 0.3s ease-out ;
+	transform: translatey( -900px );
+	opacity: 0 ;
 }
 
 .game_parent_container {
@@ -33,36 +116,49 @@ a {
 .container_centered {
 	display: flex ;
 	flex-direction: column ;
-	width: 50% ;
-	height: 50% ;
+	width: 33vw ;
+	min-width: 500px;
+	max-width: 33vw ;
+	height: 33vw ;
+	min-height: 480px ;
+	max-height: 33vw ;
 	flex-grow: 0 ;
 	flex-shrink: 0 ;
 	justify-content: center ;
 	align-items: center ;
 	align-content: center ;
-	background: #3D4B51 ;
+	background-color:rgba( 61 , 75 , 81 , 0.51 ) ;
 	text-align: center ;
-	color: #50E3C2 ;
+	color: #50e3c2 ;
+}
 
+.container--padded {
+ 	padding-top: 30px ;
+}
+
+.screen {
+	transition: all 0.3s ease-out ;
 }
 
 .game_child_container {
 	display: flex ;
 	padding: 24px ;
-	background: #3D4B51 ;
+	background: #3d4b51 ;
 	align-self: center ;
-	box-shadow: 0 4px 4px 4px #282B30 ;
+	box-shadow: 0 4px 4px 4px #282b30 ;
 	border-radius: 2px ;
 }
+
 .small {
-	max-width: 40.5vh;
+	max-width: 41.5vh ;
 }
+
 .medium {
-	max-width: 61vh;
+	max-width: 62vh ;
 }
 
 .large {
-	max-width: 92vh;
+	max-width: 92vh ;
 }
 
 .memory_cards_container {
@@ -72,11 +168,9 @@ a {
 	padding: 0 ;
 	margin: 0 ;
 	flex-wrap: wrap ;
-	background: #3D4B51 ;
+	background: #3d4b51 ;
 	border-radius: 4px ;
 	justify-content: center ;
-	/* align-items: center ; */
-	/* align-content: center ; */
 }
 
 .card {
@@ -84,13 +178,12 @@ a {
 	width: 10vh ;
 	height: 10vh ;																																																				
 	border-radius: 4px ;
-	margin: 0.03em ;
+	margin: 1px;
 	background: #2c3139 ;
 	align-self: center ;
 	justify-content: center ;
 	align-items: center ;
 	transition: all 0.2s ease-out ;
-
 }
 
 .memory_card_iteration {
@@ -103,43 +196,55 @@ a {
 .container_game_info {
 	display: flex ;
 	justify-content: space-between ;
-	margin: 0.5em 2em ;
+	margin: 5px 10px ;
 }
+
+.final_result_container {
+	font-size: 14px ;
+	color: #e3d4a6 ;
+	height: 48px ;
+
+}
+
 .game_info {
 	margin: 0 ;
 	color: #4f5c62 ;
-	font-size: 0.8rem ;
+	font-size: 14px ;
 	text-transform: uppercase ;
 }
-
+.reset_game{
+	color: #4f5c62 ;
+}
+.reset_game:hover {
+	color: #ee4e7a ;
+}
 .matching_cards {
-	box-shadow: inset 0px 0px 0px 2px rgba( 0, 0, 0, 0.2);
+	box-shadow: inset 0px 0px 0px 1px rgba( 11 , 111 , 111 , 0.9 ) ;
 }
 
 .difficulty_button,
 .play_again {
 	display: inline-flex ;
+	font-weight: 700 ;
 	width: 48px ;
 	height: 48px ;
 	border-radius: 4px ;	
-	background: #2C3139 ;
+	background: #2c3139 ;
 	align-self: center ;
 	justify-content: center ;
 	align-items: center ;
-	border: 1px solid #2C3139 ;
-	color: #3D4B51 ;
+	color: #ee4e7a ;
 	transition: all 0.22s ease-out ;
 }
+
 .play_again {
 	width: 50% ;
 }
 
-
-.play_again:hover,
+.play_again:hover ,
 .difficulty_button:hover {
-	/*border: 1px solid #50E3C2 ;*/
-	color: #50E3C2 ;
-	background: #262A32 ;
+	color: #50e3c2 ;
+	background: #262a32 ;
 }
 
 .difficulties {
@@ -153,20 +258,43 @@ a {
 	margin: 5px ;
 } 
 
-/* Memory Card States */
+.kid {
+	background-color: #0b97ac ;
+}
 
-.selected,
+.expirienced {
+	background-color: #4f72b7 ;
+}
+
+.unicorn {
+	background-color: #a066aa ;
+}
+
+.memory_logo {
+	margin-top: 4rem ;
+	width: 51vw ;
+}
+
+/* memory card states */
+
+.selected ,
 .selected:hover {
 	background: #222222 ;
 }
 
 .matched_symbols {
-	animation:  bump 0.2s cubic-bezier( 0.36 , 0.07 , 0.19 , 0.97 ) both ;
-  	transform: translate3d(0, 0, 0) ;
-  	color: #2C3139;
+	animation:  bump 0.3s cubic-bezier( 0.36 , 0.07 , 0.19 , 0.97 ) both ;
+  	transform: translate3d( 0,  0 , 0 ) ;
+  	color: #2c3139;
 }
+
+.winning_symbols {
+	color: #e3d4a6 ;
+	animation:  winning 0.3s cubic-bezier( 0.36 , 0.07 , 0.19 , 0.97 ) both ;
+}
+
 .matched_cards {
-	background: #3D4B51;
+	background: #3d4b51;
 }
 
 .hide {
@@ -180,55 +308,88 @@ a {
 	color: #e3d4a6 ;
 }
 
-/* Interactions */
+/* interactions */
 .nonono {
   animation: shake 0.2s cubic-bezier( 0.36 , 0.07 , 0.19 , 0.97 ) both ;
   transform: translate3d( 0 , 0 , 0) ;
   backface-visibility: hidden ;
 }
 
+
+
+/* animations */
 @keyframes shake {
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0) ;
+  10% , 90% {
+    transform: translate3d( -1px , 0 , 0 ) ;
   }
   
-  20%, 80% {
-    transform: translate3d(3px, 0, 0) ;
+  20% , 80% {
+    transform: translate3d( 3px , 0 , 0 ) ;
   }
 
-  30%, 50%, 70% {
-    transform: translate3d(-6px, 0, 0) ;
+  30% , 50% , 70% {
+    transform: translate3d( -6px , 0 , 0 ) ;
   }
 
-  40%, 60% {
-    transform: translate3d(6px, 0, 0) ;
+  40% , 60% {
+    transform: translate3d( 6px , 0 , 0 ) ;
   }
 }
+
 @keyframes bump {
-  10%, 30% {
-    transform: scale3d(1.6, 1.6, 0) ;
+  10% {
+    transform: scale3d( 1.1 , 1.1 , 0 ) ;
+  }
+  
+  20% {
+    transform: scale3d( 1.6 , 1.6 , 0 ) ;
+  }
+
+  30% {
+  	transform: scale3d( 1.6 , 1.6 , 0 ) ;
+    color: #e3d4a6 ;
+  }
+
+  40% , 60% {
+    transform: scale3d( 1.4 , 1.4 , 0 ) ;
+  }
+
+  50% , 70% {
+  	transform: scale3d( 0.8 , 0.8 , 0 ) ;
+  }
+  80% {
+  	transform: scale3d( 1.1 , 1.1 , 0 ) ;
+  }
+  90% {
+  	transform: scale3d( 0.9 , 0.9 , 0 ) ;
+  }
+}
+
+@keyframes winning {
+  10% , 30% {
+    transform: scale3d( 1.2 , 1.2 , 0 ) ;
     color: #e3d4a6 ;
   }
   
-  20%, {
-    transform: scale3d(0.9, 0.9, 0) ;
+  20% , {
+    transform: scale3d( 0.8 , 0.8 , 0 ) ;
   }
 
-  40%, 60% {
-    transform: scale3d(1.4, 1.4, 0) ;
+  40% , 60% {
+    transform: scale3d( 1.1 , 1.1 , 0 ) ;
   }
 
-  50%, 70% {
-  	transform: scale3d(0.8, 0.8, 0) ;
+  50% , 70% {
+  	transform: scale3d( 0.9 , 0.9 , 0 ) ;
   }
   80% {
-  	transform: scale3d(1.1, 1.1, 0) ;
+  	transform: scale3d( 1.1 , 1.1 , 0 ) ;
   }
   90% {
-  	transform: scale3d(0.9, 0.9, 0) ;
+  	transform: scale3d( 0.9 , 0.9 , 0 ) ;
   }
-
-
 }
+
+
 
 
